本番環境と開発環境の差異があるため、CORSエラーが発生していた。origins, allowCredentialsを追加。

--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -572,7 +572,7 @@
 
 
         const apiClient = axios.create({
-            baseURL: "http://127.0.0.1:8080/api",
+            baseURL: "http://localhost:8080/api",
             headers: {
                 'Content-Type': 'application/json',
                 'Accept': 'application/json',
