--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -63,18 +63,20 @@
         <v-card class="mx-auto" max-width="374">
 
             <!--プロフィール-->
-            <div class="d-flex flex-column justify-content-center align-items-center m-1" th:object="${userForm}">
+            <div v-if="user" class="d-flex flex-column justify-content-center align-items-center m-1"
+                th:object="${userForm}">
                 <div class="text-center">
                     <v-avatar size="120" class="mx-auto" rounded>
-                        <v-img cover th:src="*{profileImagePath}"></v-img>
+                        <v-img cover :src="user.profileImagePath"></v-img>
                     </v-avatar>
                 </div>
                 <div class="m-1 d-flex align-items-center mr-3 ml-3 pr-8 pl-8">
-                    <div class="fs-4 fw-bold text-center" th:text="テスト君"></div>
-                    <a th:if="*{twitterLinkFlag}" th:href="@{https://twitter.com/{adress}(adress=*{adress})}">
-                        <img th:if="*{twitterLinkFlag}" class="m-2 img-responsive" height="18" width="18"
-                            src="/image/2021-Twitter-logo-blue.png">
-                    </a>
+                    <div class="fs-4 fw-bold text-center">
+                        {{user.name}}
+                    </div>
+                    <!-- <a v-if="user.twitterLinkFlag" th:href="@{https://twitter.com/{adress}(adress=*{adress})}">
+                        <img v-if="user.twitterLinkFlag" class="m-2 img-responsive" height="18" width="18" src="/image/2021-Twitter-logo-blue.png">
+                    </a> -->
                 </div>
                 <div class="d-flex align-items-center mr-3 ml-3 pr-8 pl-8">
                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="m-1"
@@ -83,15 +85,15 @@
                             d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
                         <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                     </svg>
-                    <div class="fs-7 text-center" th:text="横浜市立金沢動物園"></div>
+                    <div class="fs-7 text-center" th:text="XXX動物園（要Entitiy追加）"></div>
                 </div>
                 <div id="profile" class="d-flex align-items-center m-3">
-                    <div class="profile-info text-center text-blue-grey-darken-1"
-                        th:text="趣味はカメラとサウナです。ネットフリックスもよく見ます。将来は全国の動物園を訪問したいと思っています。">
+                    <div class="profile-info text-center text-blue-grey-darken-1">
+                        {{user.profile}}
                     </div>
                 </div>
                 <v-btn large class="mb-5" th:if="${editFlag}"
-                    th:onclick="' location.href = \'' + @{/user/edit/{user_id}(user_id=*{user_id})} + ' \' '">
+                    th:onclick="' location.href = \'' + @{/users/edit/{user_id}(user_id=*{user_id})} + ' \' '">
                     <span class="fs-6">&nbsp;プロフィール編集&nbsp;</span>
                 </v-btn>
             </div>
@@ -108,18 +110,20 @@
                 <v-window-item v-for="tab in tabs" :key="tab.key" :value="tab.value">
                     <v-card v-if="tab.value === '投稿'" class="mx-auto my-2" max-width="374">
                         <v-card v-for="content in contents" class="my-2 py-2">
-                            <v-img height="250" v-if="content.postImageList !== null"
-                            :src="content.postImageList[0].imageAddress" alt=""></v-img>
+                            <v-img v-if="content.postImageList !== null" height="250"
+                                :src="content.postImageList[0].imageAddress" alt=""></v-img>
                             <v-card-header class="py-1">
                                 <v-card-header-text>
-                                    <v-card-title>晴れた日の元気なコアラ</v-card-title>
+                                    <v-card-title>元気なコアラ（要Entitiy追加）</v-card-title>
                                     <v-card-subtitle class="py-0">
-                                        2019/12/12（金）12:00
+                                        {{content.visitDate}}
                                     </v-card-subtitle>
                                     <v-card-subtitle class="py-0">
                                         <a href="">テスト君</a>
                                         <span>&nbsp;@&nbsp;</span>
-                                        <a href="">横浜市立金沢動物園</a>
+                                        <a href="">
+                                            {{content.zoo.zoo_name}}
+                                        </a>
                                     </v-card-subtitle>
                                 </v-card-header-text>
                             </v-card-header>
@@ -175,6 +179,8 @@
     <!-- axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+    <!-- Vue Router -->
+    <script src="https://unpkg.com/vue-router@4.0.5/dist/vue-router.global.js"></script>
 
     <script type="module">
         import {createApp, computed} from 'vue'
@@ -196,21 +202,32 @@
                 return {
                     menu: null,
                     contents: null,
+                    user: null,
+                    userId: null,
                     tabs: [
                         {key: 1, value: '投稿'},
                         {key: 2, value: 'コメント'},
                         {key: 3, value: '写真'},
                         {key: 4, value: 'お気に入り'},
-                    ],
-                    user: null,
+                    ],   
                 }
+            },
+            mounted() {
+                // backendからの初回遷移時、vue-routerからpathparamを取得できないため、js標準で取得し、初期画面の生成に使用する
+                this.userId = location.pathname.substring(location.pathname.indexOf('/users') + 7)
+                this.onUserLoaded(this.userId);
+                this.onPostsClicked(this.userId);
+            },
+            computed: {
+
             },
 
             methods: {
-                onUserLoaded() {
-                    apiClient.get('/2')
+                onUserLoaded(userId) {
+                    apiClient.get('/' + userId)
                         .then(response => {
                             this.user = response.data;
+                            console.log(this.user);
                         })
                         .catch(error => {
                             console.log(error);
@@ -219,7 +236,7 @@
                 onTabClicked(key) {
                     switch (key) {
                         case 1:
-                            this.onPostsClicked();
+                            this.onPostsClicked(this.userId);
                             break;
                         case 2:
                             this.onCommentsClicked();
@@ -232,9 +249,10 @@
                             break;
                     }
                 },
-                onPostsClicked() {
-                    apiClient.get('/2/posts')
+                onPostsClicked(userId) {
+                    apiClient.get('/' + userId + '/posts')
                         .then(response => {
+                            this.toDateTime(response.data);
                             this.contents = response.data;
                         })
                         .catch(error => {
@@ -247,13 +265,18 @@
                 },
                 onFavoritesClicked() {
                 },
+                toDateTime(contents) {
+                    for (var i in contents) {
+                        const date = new Date(contents[i].visitDate);
+                        const year = date.getFullYear();
+                        const month = date.getMonth() + 1;
+                        const day = date.getDate();
+                        const dayOfWeek = date.getDay();
+                        const dayOfWeekStr = ["日", "月", "火", "水", "木", "金", "土"][dayOfWeek]
+                        contents[i].visitDate = `${year}年 ${month}月 ${day}日 （${dayOfWeekStr}）`;
+                    }
+                }
             },
-            mounted() {
-                this.onPostsClicked();
-            },
-            computed: {
-
-            }
         }
 
 
