Postのフィールド名のリファクタリング（IDEAで一括置換）

--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -134,7 +134,7 @@
                                 <div class="pt-1">
                                     <span class="text-medium-emphasis">Posted by </span>
                                     <a href="" class="text-medium-emphasis">
-                                        {{content.loginUser.userName}}
+                                        {{content.user.userName}}
                                     </a>
                                 </div>
                             </v-card-text>
