zoo/detailのparseができないバグを修正。Post, LoginUserのEntityの変数をIDEで一括リファクタリングし、HTML上の変数は修正できていなかっため、バグを埋め込んだ。

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -43,7 +43,7 @@
 												const flag = json.resourse.flag;
 												const postimageFavoriteId = json.resourse.postimageFavoriteId;
 												const postId = json.resourse.postImage.post.post_id;
-												const userName = json.resourse.postImage.post.loginUser.userName;
+												const userName = json.resourse.postImage.post.user.userName;
 												let text = "";
 
 												if (flag) {
