--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -178,5 +178,7 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
+
+<div th:replace="~{block/footer_boot::footerA_boot}"></div>
 </body>
 </html>
