--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -170,6 +170,7 @@
                     </v-card>
                 </v-window-item>
             </v-window>
+            <v-btn elevation="18" fab></v-btn>
         </v-card>
     </div>
 
@@ -210,7 +211,7 @@
                         {key: 2, value: 'コメント'},
                         {key: 3, value: '写真'},
                         {key: 4, value: 'お気に入り'},
-                    ],   
+                    ],
                 }
             },
             mounted() {
