--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <title>コアラマニア　トップページ</title>
 
-    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <link rel="canonical" href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+  <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+  <link rel="canonical" href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
 
 	<!-- Bootstrap core CSS -->
 	<link
@@ -144,5 +144,7 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
 		integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
 		crossorigin="anonymous"></script>
+		
+<div th:replace="~{block/footer_boot::footerA_boot}"></div>
 </body>
 </html>
