--- a/src/main/resources/templates/block/footer_boot.html
+++ b/src/main/resources/templates/block/footer_boot.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
-<div id="footer" class="justify-center" th:fragment="footerA_boot">
-    <footer class="border-top justify-center">
-        <div class="d-flex justify-space-around">
-            <p><a class="text-muted p-1 col-6" href="/description">コアラマニアとは</a></p>
-            <p><a class="text-muted p-1 col-6" href="/terms">利用規約</a>
-            <p><a class="text-muted p-1 col-6" href="/privacypolicy">プライバシーポリシー</a></p>
-            <p><a class="text-muted p-1 col-6" href="https://tayori.com/form/e976498f95636ad99bb9b6dbe901499a642cd107">お問い合わせ</a></p>
+<div id="footer" th:fragment="footerA_boot">
+    <footer class="border-top">
+        <div class="d-flex flex-wrap">
+            <p class="p-1 col-3 text-center"><a href="/description">コアラマニアとは</a></p>
+            <p class="p-1 col-3 text-center"><a href="/terms">利用規約</a>
+            <p class="p-1 col-3 text-center"><a href="/privacypolicy">プライバシーポリシー</a></p>
+            <p class="p-1 col-3 text-center"><a href="https://tayori.com/form/e976498f95636ad99bb9b6dbe901499a642cd107">お問い合わせ</a></p>
         </div>
     </footer>
 </div>
