--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -116,12 +116,17 @@
                                 :src="content.postImageList[0].imageAddress" alt=""></v-img>
                             <v-card-header class="py-1">
                                 <v-card-header-text>
-                                    <v-card-title>元気なコアラ（要Entitiy追加）</v-card-title>
+                                    <v-card-title>
+                                        {{content.title}}
+                                    </v-card-title>
                                     <v-card-subtitle class="py-0">
                                         {{content.visitDate}}
                                     </v-card-subtitle>
+                                    <!-- TODO リンク作成 -->
                                     <v-card-subtitle class="py-0">
-                                        <a href="">テスト君</a>
+                                        <a href="" v-if="content.postImageList !== null">
+                                            {{content.postImageList[0].animal.name}}
+                                        </a>
                                         <span>&nbsp;@&nbsp;</span>
                                         <a href="">
                                             {{content.zoo.zoo_name}}
@@ -131,7 +136,7 @@
                             </v-card-header>
                             <v-card-text class="py-1">
                                 <div>
-                                    今日は天気も良かったし、最高のお出かけ日和ですわ。良い写真が撮れて良かった。
+                                    {{content.contents}}
                                 </div>
                                 <div class="pt-1">
                                     <span class="text-medium-emphasis">Posted by </span>
@@ -179,8 +184,6 @@
             <v-icon>mdi-plus</v-icon>
         </v-btn>
     </v-card>
-
-
 
     </div>
 
@@ -285,7 +288,7 @@
                         const day = date.getDate();
                         const dayOfWeek = date.getDay();
                         const dayOfWeekStr = ["日", "月", "火", "水", "木", "金", "土"][dayOfWeek]
-                        contents[i].visitDate = `${year}年 ${month}月 ${day}日 （${dayOfWeekStr}）`;
+                        contents[i].visitDate = `${year}年 ${month}月 ${day}日（${dayOfWeekStr}）`;
                     }
                 }
             },
