CORSエラーにより、マイページが表示されない事象を解消。

--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -204,7 +204,7 @@
 
 
         const apiClient = axios.create({
-            baseURL: "http://127.0.0.1:8080/api/users",
+            baseURL: "http://localhost:8080/api/users",
             headers: {
                 'Content-Type': 'application/json',
                 'Accept': 'application/json',
