アイコン座標をデバイス幅に合わせて調整

--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -180,7 +180,7 @@
                     </v-card>
                 </v-window-item>
             </v-window>
-        <v-btn icon fab large top="86vh" left="78vw" position="fixed">
+        <v-btn icon fab large top="86vh" left="calc(50% + (374px / 2) - 48px - 30px)" position="fixed">
             <v-icon>mdi-plus</v-icon>
         </v-btn>
     </v-card>
