--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,22 +8,16 @@
     <title>コアラマニア　トップページ</title>
 
 	<!-- Bootstrap core CSS -->
-	<link
-			href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-			rel="stylesheet"
-			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-			crossorigin="anonymous">
-
-	<link href="/css/background.css" rel="stylesheet">
-	<link href="/css/index.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
-	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-  <link rel="canonical" href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+	<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+	<link href="/css/background.css" rel="stylesheet">
+	<link href="/css/index.css" rel="stylesheet">
 </head>
 
 <body style="visibility:hidden" onLoad="document.body.style.visibility='visible'">
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <div th:replace="~{block/header_boot::headerA_boot}"></div>
 
 <form class="searchform" method="get" th:action="@{/filter}" th:object="${animalFilterForm}">
@@ -35,8 +29,9 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">動物園で絞り込み</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"
-						aria-label="Close"></button>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
 			</div>
 
 			<div class="modal-body">
@@ -62,8 +57,9 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="animalModalLabel">動物で絞り込み</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"
-						aria-label="Close"></button>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
 			</div>
 				<div class="modal-body">
 					<input type="checkbox" th:id="koala" th:text="コアラ">
@@ -93,12 +89,12 @@
 							<a class="search tab_active">キーワードから探す</a>
 						</div>
 						<div class="col-4 topsearch_tab second js-modal-open-zoo d-flex align-items-center justify-content-center">
-							<a class="search" data-bs-toggle="modal"
-							   data-bs-target="#exampleModal">動物園から探す</a>
+							<a class="search" data-toggle="modal"
+							   data-target="#exampleModal">動物園から探す</a>
 						</div>
 						<div class="col-4 topsearch_tab third js-modal-open-animal d-flex align-items-center justify-content-center">
-							<a class="search" data-bs-toggle="modal"
-							   data-bs-target="#animalModal">動物から探す</a>
+							<a class="search" data-toggle="modal"
+							   data-target="#animalModal">動物から探す</a>
 						</div>
 					</div>
 				</div>
@@ -129,19 +125,6 @@
 				+ ':35729/livereload.js?snipver=2"></' + 'script>')
 
 </script>
-
-<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-		crossorigin="anonymous"></script>
-<script
-		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-		integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-		crossorigin="anonymous"></script>
-<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-		integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-		crossorigin="anonymous"></script>
 		
 <div th:replace="~{block/footer_boot::footerA_boot}"></div>
 </body>
