--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -168,17 +168,181 @@
                         </v-card>
                     </v-card>
                     <!-- コメント用 -->
-                    <v-card v-if="tab.value === 'コメント'">
-                        コメント画面を作る
+                    <v-card v-if="tab.value === 'コメント'" class="mx-auto my-2" max-width="374">
+                        <v-card v-for="content in contents" class="my-2 py-2">
+                            <v-img v-if="content.postImageList !== null" height="250"
+                                :src="content.postImageList[0].imageAddress" alt=""></v-img>
+                            <v-card-header class="py-1">
+                                <v-card-header-text>
+                                    <v-card-title>
+                                        {{content.title}}
+                                    </v-card-title>
+                                    <v-card-subtitle class="py-0">
+                                        {{content.visitDate}}
+                                    </v-card-subtitle>
+                                    <!-- TODO リンク作成 -->
+                                    <v-card-subtitle class="py-0">
+                                        <a href="" v-if="content.postImageList !== null">
+                                            <!-- https://teratail.com/questions/351116 -->
+                                            {{content.postImageList[0] && content.postImageList[0].animal && content.postImageList[0].animal.name}}
+                                        </a>
+                                        <span>&nbsp;@&nbsp;</span>
+                                        <a href="">
+                                            {{content.zoo && content.zoo.zoo_name}}
+                                        </a>
+                                    </v-card-subtitle>
+                                </v-card-header-text>
+                            </v-card-header>
+                            <v-card-text class="py-1">
+                                <div>
+                                    {{content.contents}}
+                                </div>
+                                <div class="pt-1">
+                                    <span class="text-medium-emphasis">Posted by </span>
+                                    <a href="" class="text-medium-emphasis">
+                                        {{content.user.username}}
+                                    </a>
+                                </div>
+                            </v-card-text>
+                            <v-container fluid class="py-1">
+                                <v-row justify="center">
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-star</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-comment</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-share</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                </v-row>
+                            </v-container>
+                        </v-card>
                     </v-card>
+                    
                     <!-- 写真用 -->
-                    <v-card v-if="tab.value === '写真'">
-                        写真画面を作る
+                    <v-card v-if="tab.value === '写真'" class="mx-auto my-2" max-width="374">
+                        <v-card v-for="content in contents" class="my-2 py-2">
+                            <v-img v-if="content.postImageList !== null" height="250"
+                                :src="content.postImageList[0].imageAddress" alt=""></v-img>
+                            <v-card-header class="py-1">
+                                <v-card-header-text>
+                                    <v-card-title>
+                                        {{content.title}}
+                                    </v-card-title>
+                                    <v-card-subtitle class="py-0">
+                                        {{content.visitDate}}
+                                    </v-card-subtitle>
+                                    <!-- TODO リンク作成 -->
+                                    <v-card-subtitle class="py-0">
+                                        <a href="" v-if="content.postImageList !== null">
+                                            <!-- https://teratail.com/questions/351116 -->
+                                            {{content.postImageList[0] && content.postImageList[0].animal && content.postImageList[0].animal.name}}
+                                        </a>
+                                        <span>&nbsp;@&nbsp;</span>
+                                        <a href="">
+                                            {{content.zoo && content.zoo.zoo_name}}
+                                        </a>
+                                    </v-card-subtitle>
+                                </v-card-header-text>
+                            </v-card-header>
+                            <v-card-text class="py-1">
+                                <div>
+                                    {{content.contents}}
+                                </div>
+                                <div class="pt-1">
+                                    <span class="text-medium-emphasis">Posted by </span>
+                                    <a href="" class="text-medium-emphasis">
+                                        {{content.user.username}}
+                                    </a>
+                                </div>
+                            </v-card-text>
+                            <v-container fluid class="py-1">
+                                <v-row justify="center">
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-star</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-comment</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-share</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                </v-row>
+                            </v-container>
+                        </v-card>
                     </v-card>
                     <!-- お気に入り用 -->
-                    <v-card v-if="tab.value === 'お気に入り'">
-                        お気に入り画面を作る
+                    <v-card v-if="tab.value === 'お気に入り'" class="mx-auto my-2" max-width="374">
+                        <v-card v-for="content in contents" class="my-2 py-2">
+                            <v-img v-if="content.postImageList !== null" height="250"
+                                :src="content.postImageList[0].imageAddress" alt=""></v-img>
+                            <v-card-header class="py-1">
+                                <v-card-header-text>
+                                    <v-card-title>
+                                        {{content.title}}
+                                    </v-card-title>
+                                    <v-card-subtitle class="py-0">
+                                        {{content.visitDate}}
+                                    </v-card-subtitle>
+                                    <!-- TODO リンク作成 -->
+                                    <v-card-subtitle class="py-0">
+                                        <a href="" v-if="content.postImageList !== null">
+                                            <!-- https://teratail.com/questions/351116 -->
+                                            {{content.postImageList[0] && content.postImageList[0].animal && content.postImageList[0].animal.name}}
+                                        </a>
+                                        <span>&nbsp;@&nbsp;</span>
+                                        <a href="">
+                                            {{content.zoo && content.zoo.zoo_name}}
+                                        </a>
+                                    </v-card-subtitle>
+                                </v-card-header-text>
+                            </v-card-header>
+                            <v-card-text class="py-1">
+                                <div>
+                                    {{content.contents}}
+                                </div>
+                                <div class="pt-1">
+                                    <span class="text-medium-emphasis">Posted by </span>
+                                    <a href="" class="text-medium-emphasis">
+                                        {{content.user.username}}
+                                    </a>
+                                </div>
+                            </v-card-text>
+                            <v-container fluid class="py-1">
+                                <v-row justify="center">
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-star</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-comment</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
+                                        <v-btn icon color="grey" variant="plain">
+                                            <v-icon>mdi-share</v-icon>
+                                        </v-btn>
+                                    </v-col>
+                                </v-row>
+                            </v-container>
+                        </v-card>
                     </v-card>
+
                 </v-window-item>
             </v-window>
         <v-btn icon fab large top="86vh" left="calc(50% + (374px / 2) - 48px - 30px)" position="fixed">
@@ -286,8 +450,24 @@
                         });
                 },
                 onImagesClicked() {
+                    apiClient.get('/' + userId + '/images')
+                        .then(response => {
+                            this.toDateTime(response.data);
+                            this.contents = response.data;
+                        })
+                        .catch(error => {
+                            console.log(error);
+                        });
                 },
                 onFavoritesClicked() {
+                    apiClient.get('/' + userId + '/favorites')
+                        .then(response => {
+                            this.toDateTime(response.data);
+                            this.contents = response.data;
+                        })
+                        .catch(error => {
+                            console.log(error);
+                        });
                 },
                 toDateTime(contents) {
                     for (var i in contents) {
