--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -228,64 +228,14 @@
                     
                     <!-- 写真用 -->
                     <v-card v-if="tab.value === '写真'" class="mx-auto my-2" max-width="374">
-                        <v-card v-for="content in contents" class="my-2 py-2">
-                            <v-img v-if="content.postImageList !== null" height="250"
-                                :src="content.postImageList[0].imageAddress" alt=""></v-img>
-                            <v-card-header class="py-1">
-                                <v-card-header-text>
-                                    <v-card-title>
-                                        {{content.title}}
-                                    </v-card-title>
-                                    <v-card-subtitle class="py-0">
-                                        {{content.visitDate}}
-                                    </v-card-subtitle>
-                                    <!-- TODO リンク作成 -->
-                                    <v-card-subtitle class="py-0">
-                                        <a href="" v-if="content.postImageList !== null">
-                                            <!-- https://teratail.com/questions/351116 -->
-                                            {{content.postImageList[0] && content.postImageList[0].animal && content.postImageList[0].animal.name}}
-                                        </a>
-                                        <span>&nbsp;@&nbsp;</span>
-                                        <a href="">
-                                            {{content.zoo && content.zoo.zoo_name}}
-                                        </a>
-                                    </v-card-subtitle>
-                                </v-card-header-text>
-                            </v-card-header>
-                            <v-card-text class="py-1">
-                                <div>
-                                    {{content.contents}}
-                                </div>
-                                <div class="pt-1">
-                                    <span class="text-medium-emphasis">Posted by </span>
-                                    <a href="" class="text-medium-emphasis">
-                                        {{content.user.username}}
-                                    </a>
-                                </div>
-                            </v-card-text>
-                            <v-container fluid class="py-1">
-                                <v-row justify="center">
-                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
-                                        <v-btn icon color="grey" variant="plain">
-                                            <v-icon>mdi-star</v-icon>
-                                        </v-btn>
-                                    </v-col>
-                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
-                                        <v-btn icon color="grey" variant="plain">
-                                            <v-icon>mdi-comment</v-icon>
-                                        </v-btn>
-                                    </v-col>
-                                    <v-col cols="3" class="py-1 d-flex justify-content-center">
-                                        <v-btn icon color="grey" variant="plain">
-                                            <v-icon>mdi-share</v-icon>
-                                        </v-btn>
-                                    </v-col>
-                                </v-row>
-                            </v-container>
+                        <v-card v-for="content in contents">
+                            <v-img v-if="content.postImageList !== null" height="100"
+                            :src="content.postImageList[0].imageAddress" alt=""></v-img>
                         </v-card>
                     </v-card>
+
                     <!-- お気に入り用 -->
-                    <v-card v-if="tab.value === 'お気に入り'" class="mx-auto my-2" max-width="374">
+                    <v-card v-if="tab.value === 'お気に入り'" class="mx-auto my-2" max-width="374">                            
                         <v-card v-for="content in contents" class="my-2 py-2">
                             <v-img v-if="content.postImageList !== null" height="250"
                                 :src="content.postImageList[0].imageAddress" alt=""></v-img>
@@ -449,7 +399,7 @@
                             console.log(error);
                         });
                 },
-                onImagesClicked() {
+                onImagesClicked(userId) {
                     apiClient.get('/' + userId + '/images')
                         .then(response => {
                             this.toDateTime(response.data);
@@ -459,7 +409,7 @@
                             console.log(error);
                         });
                 },
-                onFavoritesClicked() {
+                onFavoritesClicked(userId) {
                     apiClient.get('/' + userId + '/favorites')
                         .then(response => {
                             this.toDateTime(response.data);
